[package]
name = "hackernews_comments"
version = "0.1.0"
edition = "2018"

[dependencies]
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
scraper = "0.12.0"
rusqlite = "0.25.3"
notify-rust = "4.0"
rodio = "0.18.1"
chrono = "0.4"
string-join = "0.1.2"
dirs = "3.0"
clap = "2.33"
serde_json = "1.0"
